<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aim And Destroy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aim_and_destroy_game">AimAndDestroyGameActivity</string>
    <string name="begginer">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="exit">Exit</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="ended_successfully">You have ended successfully!</string>
    <string name="return_button">Return</string>
    <string name="time_to_complete">Time you took to complete:</string>
    <string name="go_back">Go Back</string>
    <string name="aim_and_destroy_playing">Aim And Destroy Playing...</string>

</resources>
